--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <nav class="navbar">
             <div class="nav-inner">
-                <h2 class="logo">Prachi</h2>
+                <h2 class="logo">Prachi Malla</h2>
                 <button id="menu-button" aria-expanded="false">☰</button>
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
